tests/paczka1/small_fuzzy/39464027.err
Error in line 1: 89IVrSF8eG A285 58,5
Error in line 3: 89IVrSF8eG S675 45,6
Error in line 2: 0s9NU63rtX A653 5,1
